# tts-httpx

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  poetry.toml  pyproject.toml
api/: __init__.py  dependencies.py  endpoints.py  utils.py
core/: chat.py  tts.py
